# P

./: .gitignore  .gitmodules
Src/Pc/CompilerCore/: DefaultTranslationErrorHandler.cs  ITranslationErrorHandler.cs
Src/Pc/CompilerCore/Backend/: IRTransformer.cs  NameManagerBase.cs
Src/Pc/CompilerCore/Backend/ASTExt/: CloneExpr.cs
Src/Pc/CompilerCore/Backend/Debugging/: IrToPseudoP.cs
Src/Pc/CompilerCore/Backend/PSharp/: PSharpCodeGenerator.cs
Src/Pc/CompilerCore/Backend/Prt/: PrtCodeGenerator.cs  PrtNameManager.cs
Src/Pc/CompilerCore/Parser/: PLexer.g4  PParser.g4
Src/Pc/CompilerCore/TypeChecker/: ControlFlowChecker.cs  DeclarationStubVisitor.cs  DeclarationVisitor.cs  ExprVisitor.cs  FunctionBodyVisitor.cs  InferMachineCreates.cs  LinearTypeChecker.cs  Scope.cs  StatementVisitor.cs  TypeResolver.cs
Src/Pc/CompilerCore/TypeChecker/AST/: IPExpr.cs  IPStmt.cs
Src/Pc/CompilerCore/TypeChecker/AST/Declarations/: Interface.cs  Machine.cs  NamedEventSet.cs  PEvent.cs  Variable.cs
Src/Pc/CompilerCore/TypeChecker/AST/Expressions/: BinOpExpr.cs  BoolLiteralExpr.cs  CastExpr.cs  CoerceExpr.cs  ContainsExpr.cs  CtorExpr.cs  DefaultExpr.cs  EnumElemRefExpr.cs  EventRefExpr.cs  FairNondetExpr.cs  FloatLiteralExpr.cs  FunCallExpr.cs  IntLiteralExpr.cs  KeysExpr.cs  LinearAccessRefExpr.cs  MapAccessExpr.cs  NamedTupleAccessExpr.cs  NamedTupleExpr.cs  NondetExpr.cs  NullLiteralExpr.cs  SeqAccessExpr.cs  SizeofExpr.cs  StringExpr.cs  ThisRefExpr.cs  ThisSecureRefExpr.cs  TupleAccessExpr.cs  UnaryOpExpr.cs  UnnamedTupleExpr.cs  ValuesExpr.cs  VariableAccessExpr.cs
Src/Pc/CompilerCore/TypeChecker/AST/Statements/: AddStmt.cs  AnnounceStmt.cs  AssertStmt.cs  AssignStmt.cs  BreakStmt.cs  CompoundStmt.cs  ContinueStmt.cs  CtorStmt.cs  FunCallStmt.cs  GotoStmt.cs  IfStmt.cs  InsertStmt.cs  MoveAssignStmt.cs  NoStmt.cs  PopStmt.cs  PrintStmt.cs  RaiseStmt.cs  ReceiveStmt.cs  RemoveStmt.cs  ReturnStmt.cs  SecureSendStmt.cs  SendStmt.cs  SwapAssignStmt.cs  UnencryptedSendStmt.cs  UntrustedSendStmt.cs  WhileStmt.cs
Src/Pc/CompilerCore/TypeChecker/Types/: ForeignType.cs  MapType.cs  PLanguageType.cs  PermissionType.cs  PrimitiveType.cs  SequenceType.cs  TupleType.cs  TypeDefType.cs
Src/Prt/: CMakeLists.txt
Src/Prt/API/: PrtProgram.h  PrtTypes.h  PrtValues.h
Src/Prt/API-SGX/: PrtConfig.h  PrtProgram.h  PrtValues.h
Src/Prt/Core/: PrtExecution.c  PrtExecution.h  PrtTypes.c  PrtValues.c
Src/Prt/LinuxUser/: PrtLinuxUserConfig.c  ext_compat.h
Src/Prt/SGXUser/Trusted/: PrtEnclave_t.c  PrtEnclave_t.h  ext_compat.h
Src/Prt/SGXUser/Untrusted/: PrtOCalls.c
Src/Samples/ForeignTypes/: CMakeLists.txt  ForeignTypesImpl.c  Main.c
